<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="horizontal"
              android:padding="@dimen/dialog_padding">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/selectViewDialog_widthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_view_dialog_width"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dialog_text"
            android:textStyle="bold"/>

        <NumberPicker
            android:id="@+id/selectViewDialog_widthNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dialog_item_horizontal_margin">

        <TextView
            android:id="@+id/selectViewDialog_heightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_view_dialog_height"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dialog_text"
            android:textStyle="bold"/>

        <NumberPicker
            android:id="@+id/selectViewDialog_heightNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>