<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/home_backgroundLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:gravity="center"
                tools:context=".HomeActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/home_keywordCardRecycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ProgressBar
        android:id="@+id/home_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/home_showTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/main_show_region"
        android:textColor="@color/show_region_text"
        android:shadowRadius="1"
        android:shadowColor="@color/half_transparent"
        android:shadowDy="3" />

</RelativeLayout>
