<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/actionbar_gridImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_grid_on_white_24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/actionbar_margin"
        android:visibility="invisible"/>

    <Spinner
        android:id="@+id/actionbar_selectCountrySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/actionbar_margin"
        android:layout_marginTop="@dimen/actionbar_margin"
        android:popupBackground="@android:color/transparent"
        android:background="@null"
        android:visibility="invisible"/>

</RelativeLayout>